--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -10,6 +10,64 @@ header {
     position: relative;
 }
 
+/*----------- TYPING ANIMATION -------------*/
+
+.hello-text {
+    color: var(--color-light);
+    font-size: large;
+}
+
+.static-text {
+    color: var(--color-primary-variant);
+}
+
+.wrapper .dynamic-texts {
+    margin-left: 15px;
+    height: 60px;
+    line-height: 70px;
+    overflow: hidden;
+}
+
+.dynamic-texts li {
+    font-size: 2.5rem;
+    font-weight: 500;
+    position: relative;
+    top: 0;
+    color: var(--color-primary);
+    animation: slide 30s steps(2) infinite;
+}
+
+@keyframes slide {
+    100% {
+        top: -150px;
+    }
+}
+
+.dynamic-texts li span {
+    position: relative;
+
+}
+
+.dynamic-texts li span::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: var(--color-bg);
+    background-image: url(../../assets/bg-texture.png);
+    border-left: 4px solid var(--color-primary);
+    animation: typing 4s steps(20) infinite;
+}
+
+@keyframes typing {
+    100% {
+        left: 100%;
+        margin: 0 -35px 0 35px;
+    }
+}
+
+
 /*----------- CTA -------------*/
 .cta {
     margin-top: 2.5rem;
