--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,6 +8,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 250px;
 }
 
 /* footer .social_icon */
