--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -106,7 +106,7 @@ header {
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    padding: 1rem 0 1.5rem 1.5rem;
 }
 
 
