--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,5 +1,4 @@
-nav {
-    background: rgba(0, 0, 0, 0.3);
+.nav-container {
     width: max-content;
     display: block;
     padding: 0.7rem 1.7rem;
@@ -8,25 +7,123 @@ nav {
     transform: translateX(-50%);
     bottom: 2rem;
     display: flex;
-    gap: 0.8rem;
-    border-radius: 3rem;
+    border-radius: 40px;
     backdrop-filter: blur(15px);
 }
 
-nav a {
-    background: transparent;
-    padding: 0.9rem;
-    border-radius: 50%;
+.navigation {
+    width: max-content;
+    height: 70px;
+    position: relative;
+    background: #3586ff;
     display: flex;
-    color: var(--color-light);
-    font-size: 1.1rem;
+    align-items: center;
+    border-radius: 40px;
+    backdrop-filter: blur(15px);
 }
 
-nav a:hover {
-    background: rgba(0, 0, 0, 0.3);
+.navigation ul {
+    display: flex;
+    width: 350px;
 }
 
-nav a.active {
-    background: var(--color-primary);
+.navigation ul li {
+    position: relative;
+    width: 70px;
+    z-index: 1;
+}
+
+.navigation ul li a {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    font-weight: 400;
+}
+
+.navigation ul li a .icon {
+    position: relative;
+    display: block;
+    line-height: 75px;
+    font-size: 1.5em;
+    text-align: center;
+    transition: var(--transition);
     color: var(--color-bg);
+}
+
+.navigation ul li.active a .icon {
+    transform: translateY(-32px);
+}
+
+.navigation ul li a .text {
+    position: absolute;
+    color: var(--color-bg);
+    font-weight: 400;
+    font-size: 0.75em;
+    letter-spacing: 0.05em;
+    transition: var(--transition);
+    opacity: 0;
+    transform: translateY(10px);
+}
+
+.navigation ul li.active a .text {
+    opacity: 1;
+}
+
+.indicator {
+    position: absolute;
+    top: -50%;
+    width: 70px;
+    height: 70px;
+    background-color: var(--color-primary);
+    border-radius: 50%;
+    border: 6px solid var(--color-bg);
+    transition: var(--transition);
+}
+
+.indicator::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-right-radius: 20px;
+    box-shadow: 1px -10px 0 0 var(--color-bg);
+}
+
+.indicator::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-left-radius: 20px;
+    box-shadow: -1px -10px 0 0 var(--color-bg);
+}
+
+.navigation ul li:nth-child(1).active~.indicator {
+    transform: translateX(calc(70px * 0));
+}
+
+.navigation ul li:nth-child(2).active~.indicator {
+    transform: translateX(calc(70px * 1));
+}
+
+.navigation ul li:nth-child(3).active~.indicator {
+    transform: translateX(calc(70px * 2));
+}
+
+.navigation ul li:nth-child(4).active~.indicator {
+    transform: translateX(calc(70px * 3));
+}
+
+.navigation ul li:nth-child(5).active~.indicator {
+    transform: translateX(calc(70px * 4));
 }
