Navbar update and animation completed

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,6 @@
 header {
     height: 80vw;
-    padding-top: 7rem;
+    padding-top: 2rem;
     overflow: hidden;
 }
 
@@ -124,6 +124,10 @@ header {
 @media screen and (max-width: 1024px) {
     header {
         height: 100vh;
+    }
+
+    .header_container {
+        height: 110%;
     }
 
     .wrapper {
