--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -12,6 +12,10 @@
 }
 
 .contact_option {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background: var(--color-bg-variant);
     padding: 1.2rem;
     border-radius: 1.2rem;
