--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .nav-container {
     width: max-content;
     display: block;
-    padding: 0.7rem 1.7rem;
+    padding: 0;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
@@ -9,6 +9,7 @@
     display: flex;
     border-radius: 40px;
     backdrop-filter: blur(5px);
+    z-index: 5;
 }
 
 .navigation {
