--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -2,6 +2,11 @@
     display: grid;
     grid-template-columns: 35% 50%;
     gap: 15%;
+    margin: 0;
+}
+
+.about_content p {
+    margin: 0;
 }
 
 .about_me {
@@ -14,6 +19,8 @@
             transparent);
     display: grid;
     place-items: center;
+    margin: 0;
+
 }
 
 .about_me img {
@@ -21,6 +28,7 @@
     overflow: hidden;
     transform: rotate(10deg);
     transition: var(--transition);
+    margin: 0;
 }
 
 .about_me img:hover {
@@ -31,6 +39,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
+    margin: 0;
 }
 
 .about_card {
@@ -39,6 +48,7 @@
     border-radius: 1rem;
     padding: 1rem;
     text-align: center;
+    margin: 0;
     transition: var(--transition);
 }
 
@@ -64,7 +74,7 @@
 }
 
 .about_content p {
-    margin: 2rem 0 2.6rem;
+    margin: 0;
     color: var(--color-light);
 }
 
@@ -87,6 +97,10 @@
 
 /* -------- MEDIA QUERIES FOR SMALL DEVICES -------*/
 @media screen and (max-width: 600px) {
+    .about_container {
+        margin: 0;
+    }
+
     .about_me {
         width: 65%;
         margin: 0 auto 3rem;
@@ -99,9 +113,11 @@
 
     .about_content {
         text-align: center;
+
     }
 
+    /* 
     .about_content p {
-        margin: 1.5rem 0;
-    }
+        margin: auto;
+    } */
 }
