--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-/* TAILWIND STYLE */
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 /* GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
@@ -126,6 +121,7 @@ img {
 @media screen and (max-width: 1024px) {
   .container {
     width: var(--container-width-md);
+    margin: 0;
   }
 
   section {
@@ -137,6 +133,7 @@ img {
 @media screen and (max-width: 600px) {
   .container {
     width: var(--container-width-sm);
+    margin: 0;
   }
 
   section {
