--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -99,6 +99,7 @@
 @media screen and (max-width: 600px) {
     .about_container {
         margin: 0;
+        padding-left: 20px;
     }
 
     .about_me {
@@ -116,8 +117,4 @@
 
     }
 
-    /* 
-    .about_content p {
-        margin: auto;
-    } */
 }
