--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -47,6 +47,7 @@
 @media screen and (max-width: 600px) {
     .container.testimonials_container {
         width: var(--container-width-sm);
+        padding-left: 20px;
     }
 
     .client_reviw {
