--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,6 +9,7 @@ footer {
     align-items: center;
     flex-direction: column;
     margin-top: 250px;
+    z-index: 10;
 }
 
 /* footer .social_icon */
